2003-06-03  Chris Demetriou  <cgd@broadcom.com>

	* config/tc-mips.c: (OPTION_ARCH_BASE, OPTION_ASE_BASE)
	(OPTION_COMPAT_ARCH_BASE, OPTION_FIX_BASE)
	(OPTION_MISC_BASE): New defines.
	(OPTION_BREAK, OPTION_CONSTRUCT_FLOATS, OPTION_EB, OPTION_EL)
	(OPTION_ELF_BASE, OPTION_FIX_VR4122, OPTION_FP32, OPTION_FP64)
	(OPTION_GP32, OPTION_GP64, OPTION_M3900, OPTION_M4010, OPTION_M4100)
	(OPTION_M4650, OPTION_M7000_HILO_FIX, OPTION_MARCH, OPTION_MDMX)
	(OPTION_MEMBEDDED_PIC, OPTION_MIPS1, OPTION_MIPS16, OPTION_MIPS2)
	(OPTION_MIPS3, OPTION_MIPS32, OPTION_MIPS32R2, OPTION_MIPS3D)
	(OPTION_MIPS4, OPTION_MIPS5, OPTION_MIPS64)
	(OPTION_MNO_7000_HILO_FIX, OPTION_MTUNE, OPTION_NO_CONSTRUCT_FLOATS)
	(OPTION_NO_FIX_VR4122, OPTION_NO_M3900, OPTION_NO_M4010)
	(OPTION_NO_M4100, OPTION_NO_M4650, OPTION_NO_MDMX, OPTION_NO_MIPS16)
	(OPTION_NO_MIPS3D, OPTION_NO_RELAX_BRANCH, OPTION_RELAX_BRANCH)
	(OPTION_TRAP): Redefine in terms of new defines.
	(md_longopts): Reorder entries.

2003-05-14  Michael Snyder  <msnyder@redhat.com>
	From Bernd Schmidt  <bernds@redhat.com>
	and Michael Snyder  <msnyder@redhat.com>
	and Alexandre Oliva <aoliva@redhat.com>
	* config/tc-h8300.c: Add insns and addressing modes for h8300sx.
	* config/tc-h8300.h: Ditto.

2003-06-03  Nick Clifton  <nickc@redhat.com>

	* tc-v850.c (tc-gen_reloc): Translate BFD_RELOC_32 into
        BFD_RELOC_32_PCREL if the reloc is pc-relative.  Do this
        before calling bfd_reloc_type_lookup.
        
2003-06-02  Alan Modra  <amodra@bigpond.net.au>

	* read.c (emit_expr): Set dot_value.
	* dw2gencfi.c (output_fde): Remove pcrel reloc hack.

2003-06-02  Alan Modra  <amodra@bigpond.net.au>

	* macro.c (sub_actual): Don't lose string if it turns out that
	&string wasn't an arg.

2003-05-31  Richard Henderson  <rth@redhat.com>

	* dw2gencfi.c (output_fde): Use fix_new to emit pc-relative reloc.
	(cfi_finish): Set flag_traditional_format around .eh_frame data.

2003-05-29  Richard Henderson  <rth@redhat.com>
