@@ -1,3 +1,11 @@
+2003-06-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* as.c (show_usage): Document --execstack and --noexecstack.
+	(parse_args): Add --execstack and --noexecstack.
+	(main): Create .note.GNU-stack section if --execstack or
+	--noexecstack was given on comand line, set its SHF_EXECINSTR bit.
+	* as.h (flag_execstack, flag_noexecstack): New.
+
 2003-06-03  Chris Demetriou  <cgd@broadcom.com>
 
 	* config/tc-mips.c: (OPTION_ARCH_BASE, OPTION_ASE_BASE)
